compiler/kernc_cli/tests/soundness/reject/parser/unterminated_block_comment_reports_lex_error.kn
// source: lexer/parser boundary must surface unterminated block comments as diagnostics, not panics
// stderr: Expected declaration
fn main() i32 {
    return 0;
}
/* unterminated
